
package mysql;

message tb_family_record{
    required uint32 id = 1;
    required uint32 type = 2;
    required uint32 killer_family = 3;
    required uint32 killer = 4;
    required uint32 slain_family = 5;
    required uint32 slain_title = 6;
    required uint32 slain = 7;
}
